listed first.  The most up-to-date version is in the civet git repository
redmine:/var/git/civet.git

Version 1.2.0
-------------
Bug fixes
 - Fix incorrect Torque error code -> error string mappings
   (had to implement our own lookup, since pbs_python had old (Torque 2.X) 
   mappings)

Features
 - Enhanced exception handling for job submission errors (users no longer
   see a stack trace when there is a Torque error, instead they simply 
   see a helpful error message) 
 - Modify parse_XML to allow an optional colon separated list of directories
   to search for XML tool definition files. The civet_run command now will 
   pass the contents of the CIVET_PATH environment variable as this parameter.
 - Add new syntax for explicitly declaring the default output directory,
   <dir ... default_output="True" ... />  If not specified, the current
   working directory is used.
   Previously the default output directory was implicitly specified as the
   first directory tag in the XML that wasn't marked as input="True".

Version 1.1.0
-------------
Bug fixes
 - Fix problem creating directories when create="False" was specified.
   Sometimes this attribute was ignored. Reported by Anu.
   
Features
 - Enhanced civet_status:
    - default is now an abbreviated status listing
    - the --verbose option now outputs the original job-by-job status
    - the --recurse (short form -r) option searches the specified tree for 
      log directories and outputs status for each one found
 - Mail is now set to the submitting user at the end of each run.
 - In the event of a cancelled or aborted pipeline run, the user only receives
   one email, not one per cancelled / aborted cluster job.

Features added that are not used by cga pipelines:
  - For pipeline implementers: add civet_run option --no-submit (short form -n)
    ability to generate scripts but not actually submit them to the cluster

Version 1.0.0
-------------
Initial production release